--- a/public/sites/evento/css/styles.css
+++ b/public/sites/evento/css/styles.css
@@ -104,6 +104,38 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
+/*--------------------------------------------------------------
+# Testimonials
+--------------------------------------------------------------*/
+.testimonials {
+    padding: 80px 0;
+    background: url("../img/fundo.webp") no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.testimonials::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(1, 3, 111, 0.8);
+}
+
+.testimonials .container{
+    position: relative;
+}
+
+.testimonials .section-header {
+    margin-bottom: 40px;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
