--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,6 +9,10 @@
     z-index: 4;
 }
 
+div.toggle.btn {
+    margin-top: 10px;
+}
+
 .form-checkbox {
     height: 17px !important;
     width: 17px !important;
