--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,6 +13,14 @@ div.toggle.btn {
     margin-top: 10px;
 }
 
+.check-custom {
+    margin-top: -0.1rem !important;
+    height: 1.5rem !important;
+    width: 3em !important;
+    margin-left: -3.5em !important;
+}
+
+
 .form-checkbox {
     height: 17px !important;
     width: 17px !important;
@@ -95,7 +103,7 @@ div.toggle.btn {
 }
 
 .blob {
-	background: black;
+	background: #f5365c;
 	box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
 	transform: scale(1);
 	animation: pulse 2s infinite;
